--- a/prueba_Logica_Archivos.ipynb
+++ b/prueba_Logica_Archivos.ipynb
@@ -19,17 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import datetime\n",
     "import re\n",
     "import os\n",
-    "import string\n",
-    "import sys\n",
-    "import warnings\n",
-    "import PyPDF2"
+    "import string"
    ]
   },
   {
@@ -42,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -86,64 +82,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['01. Constancia de recibo correo', '02. Acta de reparto', '04. Tutela Wilson Lenis 17-01-2022', '06. 2220-31453286-20211220110343', '07. CamScanner 12-03-2021 12.14', '08. certificadoAfiliacion_6807846', '09. IMG_20211215_122823', '10. IMG-20211021-WA0015 (1)', '11. IMG-20211021-WA0015', '12. IMG-20211021-WA0016', '13. IMG-20211021-WA0017', '14. IMG-20211021-WA0018', '15. IMG-20211021-WA0019', '16. IMG-20211029-WA0002', '17. IMG-20211029-WA0003', '18. 004-2022-00023 AMDITE TUTELA -MÍNIMO VITAL', '18.1 constancia remite admision Correo_ Juzgado 04 Civil Municipal - Antioquia - Bello - Outlook', '19. Respuesta', '20. Respuesta', '21. CONSTANCIA SECRETARIAL (1)', '22. SENTENCIA -niega derecho', '22.1 constancia remite fallo', '23. IMPUGNACION', '24. Respuesta', '25. CONSTANCIA REMITE APELACION'] ['.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf']\n"
+     ]
+    }
+   ],
    "source": [
-    "# VALIDAR ERROR CUANDO LOS NOMBRES SEAN DE SOLO NUMEROS\n",
-    "def formatNames(ruta, files): \n",
-    "    \"\"\" \n",
-    "    @param: ruta, files\n",
-    "    @return: nombresExtensiones, nombres, extensiones, numeraciones, ban\n",
-    "    @modules: re, os, string\n",
-    "    \"\"\"\n",
+    "nombres = []\n",
+    "extensiones = []\n",
+    "for x in files:\n",
+    "    fulldirct = os.path.join(ruta, x)\n",
+    "    if os.path.isfile(fulldirct):\n",
+    "        nombres.append(os.path.splitext(x)[0])\n",
+    "        extensiones.append(os.path.splitext(x)[1])\n",
+    "    else: \n",
+    "        nombres.append(x)\n",
+    "        extensiones.append('Carpeta')\n",
     "\n",
-    "    nombres = []\n",
-    "    extensiones = []\n",
-    "    for x in files:\n",
-    "        fulldirct = os.path.join(ruta, x)\n",
-    "        if os.path.isfile(fulldirct):\n",
-    "            nombres.append(os.path.splitext(x)[0])\n",
-    "            extensiones.append(os.path.splitext(x)[1])\n",
-    "        else: \n",
-    "            nombres.append(x)\n",
-    "            extensiones.append('Carpeta')\n",
-    "    ban = False\n",
-    "    for x in range(len(nombres)):\n",
-    "        if not(nombres[x].isalnum()) or len(nombres[x])>40:\n",
-    "            nombres[x] = string.capwords(nombres[x])\n",
-    "            result = re.sub('[^a-zA-Z0-9]+', '', nombres[x])\n",
-    "            nombres[x] = result\n",
-    "            ban=True\n",
-    "        cont = 0\n",
-    "        for caracter in nombres[x]:\n",
-    "            if caracter.isalpha():\n",
-    "                nombres[x] = nombres[x][cont:]\n",
-    "                break\n",
-    "            else:\n",
-    "                if caracter.isnumeric():\n",
-    "                    cont = cont +1\n",
-    "                    continue\n",
-    "        nombres[x] = nombres[x][0:36]\n",
-    "        if nombres[x] == \"\":\n",
-    "            nombres[x] = (\"DocumentoElectronico\")\n",
-    "        nombres[x] = str(f\"{x+1:04}\")+nombres[x]\n",
-    "    nombresExtensiones=[]\n",
-    "    for x in range(len(nombres)):\n",
-    "        if extensiones[x] != 'Carpeta':\n",
-    "            nombresExtensiones.append(str(nombres[x])+str(extensiones[x]))\n",
-    "        else:\n",
-    "            nombresExtensiones.append(str(nombres[x]))\n",
-    "    numeraciones = list(range(len(nombres)+1))\n",
-    "    numeraciones.pop(0)\n",
-    "    if isOrderCorrect(files, nombresExtensiones):\n",
-    "        ban = True\n",
-    "    return nombresExtensiones, nombres, extensiones, numeraciones, ban\n"
+    "print(nombres, extensiones)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0001ConstanciaDeReciboCorreo', '0002ActaDeReparto', '0003TutelaWilsonLenis17012022', '00040622203145328620211220110343', '0005Camscanner120320211214', '0006Certificadoafiliacion6807846', '0007Img20211215122823', '0008Img20211021wa00151', '0009Img20211021wa0015', '0010Img20211021wa0016', '0011Img20211021wa0017', '0012Img20211021wa0018', '0013Img20211021wa0019', '0014Img20211029wa0002', '0015Img20211029wa0003', '0016AmditeTutelamnimoVital', '0017ConstanciaRemiteAdmisionCorreoJuzgad', '0018Respuesta', '0019Respuesta', '0020ConstanciaSecretarial1', '0021SentencianiegaDerecho', '0022ConstanciaRemiteFallo', '0023Impugnacion', '0024Respuesta', '0025ConstanciaRemiteApelacion']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ban = False\n",
+    "for x in range(len(nombres)):\n",
+    "    if not(nombres[x].isalnum()) or len(nombres[x])>40:\n",
+    "        nombres[x] = string.capwords(nombres[x])\n",
+    "        result = re.sub('[^a-zA-Z0-9]+', '', nombres[x])\n",
+    "        nombres[x] = result\n",
+    "        ban=True\n",
+    "    cont = 0\n",
+    "    for caracter in nombres[x]:\n",
+    "        if caracter.isalpha():\n",
+    "            nombres[x] = nombres[x][cont:]\n",
+    "            break\n",
+    "        else:\n",
+    "            if caracter.isnumeric():\n",
+    "                cont = cont +1\n",
+    "                continue\n",
+    "    nombres[x] = nombres[x][0:36]\n",
+    "    if nombres[x] == \"\":\n",
+    "        nombres[x] = (\"DocumentoElectronico\")\n",
+    "    nombres[x] = str(f\"{x+1:04}\")+nombres[x]\n",
+    "\n",
+    "print(nombres)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,19 +172,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(['0001ConstanciaDeReciboCorreo.pdf', '0002ActaDeReparto.pdf', '0003TutelaWilsonLenis17012022.pdf', '00040622203145328620211220110343.pdf', '0005Camscanner120320211214.pdf', '0006Certificadoafiliacion6807846.pdf', '0007Img20211215122823.pdf', '0008Img20211021wa00151.pdf', '0009Img20211021wa0015.pdf', '0010Img20211021wa0016.pdf', '0011Img20211021wa0017.pdf', '0012Img20211021wa0018.pdf', '0013Img20211021wa0019.pdf', '0014Img20211029wa0002.pdf', '0015Img20211029wa0003.pdf', '0016AmditeTutelamnimoVital.pdf', '0017ConstanciaRemiteAdmisionCorreoJuzgad.pdf', '0018Respuesta.pdf', '0019Respuesta.pdf', '0020ConstanciaSecretarial1.pdf', '0021SentencianiegaDerecho.pdf', '0022ConstanciaRemiteFallo.pdf', '0023Impugnacion.pdf', '0024Respuesta.pdf', '0025ConstanciaRemiteApelacion.pdf'], ['0001ConstanciaDeReciboCorreo', '0002ActaDeReparto', '0003TutelaWilsonLenis17012022', '00040622203145328620211220110343', '0005Camscanner120320211214', '0006Certificadoafiliacion6807846', '0007Img20211215122823', '0008Img20211021wa00151', '0009Img20211021wa0015', '0010Img20211021wa0016', '0011Img20211021wa0017', '0012Img20211021wa0018', '0013Img20211021wa0019', '0014Img20211029wa0002', '0015Img20211029wa0003', '0016AmditeTutelamnimoVital', '0017ConstanciaRemiteAdmisionCorreoJuzgad', '0018Respuesta', '0019Respuesta', '0020ConstanciaSecretarial1', '0021SentencianiegaDerecho', '0022ConstanciaRemiteFallo', '0023Impugnacion', '0024Respuesta', '0025ConstanciaRemiteApelacion'], ['.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf'], [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25], True)\n"
+      "['0001ConstanciaDeReciboCorreo.pdf', '0002ActaDeReparto.pdf', '0003TutelaWilsonLenis17012022.pdf', '00040622203145328620211220110343.pdf', '0005Camscanner120320211214.pdf', '0006Certificadoafiliacion6807846.pdf', '0007Img20211215122823.pdf', '0008Img20211021wa00151.pdf', '0009Img20211021wa0015.pdf', '0010Img20211021wa0016.pdf', '0011Img20211021wa0017.pdf', '0012Img20211021wa0018.pdf', '0013Img20211021wa0019.pdf', '0014Img20211029wa0002.pdf', '0015Img20211029wa0003.pdf', '0016AmditeTutelamnimoVital.pdf', '0017ConstanciaRemiteAdmisionCorreoJuzgad.pdf', '0018Respuesta.pdf', '0019Respuesta.pdf', '0020ConstanciaSecretarial1.pdf', '0021SentencianiegaDerecho.pdf', '0022ConstanciaRemiteFallo.pdf', '0023Impugnacion.pdf', '0024Respuesta.pdf', '0025ConstanciaRemiteApelacion.pdf'] ['0001ConstanciaDeReciboCorreo', '0002ActaDeReparto', '0003TutelaWilsonLenis17012022', '00040622203145328620211220110343', '0005Camscanner120320211214', '0006Certificadoafiliacion6807846', '0007Img20211215122823', '0008Img20211021wa00151', '0009Img20211021wa0015', '0010Img20211021wa0016', '0011Img20211021wa0017', '0012Img20211021wa0018', '0013Img20211021wa0019', '0014Img20211029wa0002', '0015Img20211029wa0003', '0016AmditeTutelamnimoVital', '0017ConstanciaRemiteAdmisionCorreoJuzgad', '0018Respuesta', '0019Respuesta', '0020ConstanciaSecretarial1', '0021SentencianiegaDerecho', '0022ConstanciaRemiteFallo', '0023Impugnacion', '0024Respuesta', '0025ConstanciaRemiteApelacion'] ['.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf', '.pdf'] [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25] True\n"
      ]
     }
    ],
    "source": [
-    "print(formatNames(ruta, files))"
+    "nombresExtensiones=[]\n",
+    "for x in range(len(nombres)):\n",
+    "    if extensiones[x] != 'Carpeta':\n",
+    "        nombresExtensiones.append(str(nombres[x])+str(extensiones[x]))\n",
+    "    else:\n",
+    "        nombresExtensiones.append(str(nombres[x]))\n",
+    "numeraciones = list(range(len(nombres)+1))\n",
+    "numeraciones.pop(0)\n",
+    "if isOrderCorrect(files, nombresExtensiones):\n",
+    "    ban = True\n",
+    "print(nombresExtensiones, nombres, extensiones, numeraciones, ban)"
    ]
   }
  ],
