--- a/app/assets/chain_text_test01.ipynb
+++ b/app/assets/chain_text_test01.ipynb
@@ -89,7 +89,7 @@
     "for x in lista_cadenas:\n",
     "    nombres.append(os.path.splitext(x)[0])\n",
     "    extension.append(os.path.splitext(x)[1])\n",
-    "nombres = [i.title() for i in nombres]\n",
+    "nombres = [i.title() for i in nombres] # Agrega mayuscula a la primer letra del nombre\n",
     "print(nombres)\n",
     "print(extension)"
    ]
@@ -107,129 +107,80 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Elimina caracteres especiales de los nombres y limita la cantidad de caracteres\n",
-    "\n",
-    "\"\"\" FALTA\n",
-    "Realizar una busqueda en la cadena de caracteres donde evalúe la ubicación del primer caracter Alfabético\n",
-    "Lo anterior en aras de facilitar el ordenamiento de los archivos eliminando o reemplazando los primeros\n",
-    "caracteres en caso de ser numericos; en caso de que no encuentre caracteres alfabéticos, deberá agregar un caracter alfabetico \n",
-    "en la primera posición separando así el consecutivo de la parte numérica ej: \"05A23487924378\"\n",
-    "\n",
-    "\"\"\"\n",
+    "# VALIDAR ERROR CUANDO LOS NOMBRES SEAN DE SOLO NUMEROS\n",
     "import re\n",
+    "import os\n",
+    "import string\n",
     "\n",
-    "for i in nombres:\n",
-    "    \n",
-    "    pass\n",
+    "def formatNames(self, ruta, files): \n",
+    "    \"\"\" \n",
+    "    @param: ruta, files\n",
+    "    @return: nombresExtensiones, nombres, extensiones, numeraciones, ban\n",
+    "    @modules: re, os, string\n",
+    "    \"\"\"\n",
     "\n",
-    "caracteres = 36 # Debera permitir elegir la cantidad de caracteres del nombre del archivo segun parametro que indica el length del consecutivo\n",
+    "    nombres = []\n",
+    "    extensiones = []\n",
+    "    for x in files:\n",
+    "        fulldirct = os.path.join(ruta, x)\n",
+    "        if os.path.isfile(fulldirct):\n",
+    "            # Separa el nombre y la extension, validando si es carpeta\n",
+    "            nombres.append(os.path.splitext(x)[0])\n",
+    "            extensiones.append(os.path.splitext(x)[1])\n",
+    "        else: \n",
+    "            nombres.append(x)\n",
+    "            extensiones.append('Carpeta') # Asigna 'Carpeta' en extension del archivo\n",
+    "            \n",
+    "    ban = False\n",
     "\n",
-    "nombresa = [re.sub('[^0-9a-zA-Z]+', '', x)for x in nombres]##selecciona solo letras en minusculas y mayusculas\n",
-    "nombresc = []\n",
-    "for z in nombresa:\n",
-    "    nombresc.append(z[0:caracteres])\n",
-    "print(nombresc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(len(nombresc)):\n",
-    "    if nombresc[i] == \"\":\n",
-    "        nombresc[i] = (\"DocumentoElectronico\")\n",
+    "    for x in range(len(nombres)):\n",
+    "        \n",
+    "        # Valida mayusculas y caracteres especiales\n",
+    "        if not(nombres[x].isalnum()) or len(nombres[x])>40:\n",
+    "            nombres[x] = string.capwords(nombres[x]) # Aplica mayuscula a la primera letra de cada palabra\n",
+    "            result = re.sub('[^a-zA-Z0-9]+', '', nombres[x]) # Elimina caracteres menos a-zA-Z0-9\n",
+    "            nombres[x] = result\n",
+    "            ban=True\n",
+    "        else:\n",
+    "            # Entran los archivos sin extensión\n",
+    "            #print(\"entró: \",nombres[x])\n",
+    "            pass\n",
+    "        cont = 0\n",
     "\n",
-    "print(nombresc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "numeracion = [f\"{x:03}\"for x in range(1,len(nombresc)+1)]\n",
-    "print(numeracion)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "concat = list(map(''.join, zip(numeracion,nombresc)))\n",
-    "concat2 = list(map(''.join, zip(concat,extension)))\n",
-    "print (concat2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if not(nombres[x].isalnum()) or len(nombres[x])>40:\n",
-    "    nombres[x] = string.capwords(nombres[x])\n",
-    "    result = re.sub('[^a-zA-Z0-9]+', '', nombres[x])\n",
-    "    nombres[x] = result\n",
-    "    ban=True\n",
-    "else:\n",
-    "    # Entran los archivos sin extensión\n",
-    "    #print(\"entró: \",nombres[x])\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for caracter in nombres[x]:\n",
-    "    if caracter.isalpha():\n",
-    "        nombres[x] = nombres[x][cont:]\n",
-    "        break\n",
-    "    else:\n",
-    "        if caracter.isnumeric():\n",
-    "            cont = cont +1\n",
-    "            continue\n",
-    "nombres[x] = nombres[x][0:36]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if nombres[x] == \"\":\n",
-    "    nombres[x] = (\"DocumentoElectronico\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "            if nombres[x] == \"\":\n",
-    "                nombres[x] = (\"DocumentoElectronico\")\n",
-    "            nombres[x] = str(f\"{x+1:03}\")+nombres[x]\n",
-    "        nombresExtensiones=[]\n",
-    "        for x in range(len(nombres)):\n",
-    "            if extensiones[x] != 'Carpeta':\n",
-    "                nombresExtensiones.append(str(nombres[x])+str(extensiones[x]))\n",
+    "        # Elimina del nombre los primeros numeros existentes\n",
+    "        for caracter in nombres[x]:\n",
+    "            if caracter.isalpha():\n",
+    "                nombres[x] = nombres[x][cont:]\n",
+    "                break\n",
     "            else:\n",
-    "                nombresExtensiones.append(str(nombres[x]))\n",
-    "        numeraciones = list(range(len(nombres)+1))\n",
-    "        numeraciones.pop(0)\n",
-    "        if self.isOrderCorrect(files, nombresExtensiones):\n",
-    "            ban = True\n",
-    "        return nombresExtensiones, nombres, extensiones, numeraciones, ban"
+    "                if caracter.isnumeric():\n",
+    "                    cont = cont +1\n",
+    "                    continue\n",
+    "        \n",
+    "        nombres[x] = nombres[x][0:36] # Limita la cantidad de caracteres a 36\n",
+    "\n",
+    "        # En caso de estar vacio asigna el nombre DocumentoElectronico\n",
+    "        if nombres[x] == \"\":\n",
+    "            nombres[x] = (\"DocumentoElectronico\")\n",
+    "        \n",
+    "        # Crea consecutivos\n",
+    "        nombres[x] = str(f\"{x+1:03}\")+nombres[x] \n",
+    "\n",
+    "    # Agrega consecutivo al comienzo del nombre en el mismo orden de la carpeta\n",
+    "    nombresExtensiones=[]\n",
+    "    for x in range(len(nombres)):\n",
+    "        if extensiones[x] != 'Carpeta':\n",
+    "            nombresExtensiones.append(str(nombres[x])+str(extensiones[x]))\n",
+    "        else:\n",
+    "            nombresExtensiones.append(str(nombres[x]))\n",
+    "    \n",
+    "    numeraciones = list(range(len(nombres)+1)) # Crea una lista enumerada con la cantidad de nombres\n",
+    "    numeraciones.pop(0) # Elimina el primer valor de la lista\n",
+    "\n",
+    "    # Valida con isorderCorrect si los archivos estan en orden, en caso negativo ban = true\n",
+    "    if self.isOrderCorrect(files, nombresExtensiones):\n",
+    "        ban = True\n",
+    "    return nombresExtensiones, nombres, extensiones, numeraciones, ban"
    ]
   }
  ],
